@@ -1,4 +1,4 @@
-AC_INIT(gparted, 0.0.6)
+AC_INIT(gparted, 0.0.7)
 AC_CONFIG_SRCDIR(src/main.cc)
 AM_INIT_AUTOMAKE
 
