@@ -1,5 +1,11 @@
 2004-12-03 Bart Hakvoort  <gparted@users.sf.net>
 
+	* src/fat16.cc,
+	  src/fat32.cc: added correct check for availability of 'dosfsck'
+	* configure.in: bumped to 0.0.7  YAY! ;)
+
+2004-12-03 Bart Hakvoort  <gparted@users.sf.net>
+
 	* src/GParted_Core.cc: When ( ! deep_scan ) now only one device is scanned (first found one). Shaves off a couple of millisec from startuptime |-)
 	* src/Win_GParted.cc: Fixed small bug with removable devices and the devicemenu. Also fixed redundant calling of 2 functions.
 
